<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Asuka DTV Player</string>
    <string name="action_settings">Settings</string>
    <string name="menuitem_video_codec_mode">Video decoder mode</string>
    <string name="prompt_select_video_decoder_mode">Select video decoder mode</string>
    <string name="menuitem_signal_test">Signal test</string>
    <string name="menuitem_subtitle">Subtitle</string>

    <string name="prompt_enter_scan">Are you sure to clear out all TV data and go back to the TV scan page?</string>
    <string name="str_confirm">OK</string>
    <string name="str_cancel">Cancel</string>

    <string name="str_no_signal"> no channel signal</string>

    <string name="menu_timezone_list_prompt">Select a timezone</string>
    <string name="menu_title">Menu</string>
    <string name="menu_item_scan_title">Scan Channel</string>
    <string name="menu_item_scan_btn">Scan</string>
    <string name="menu_item_chinfo_title">Channel Info</string>
    <string name="menu_item_chinfo_btn">check</string>
    <string name="menu_item_audio_title">Audio</string>
    <string name="menu_item_audio_btn">select</string>
    <string name="menu_item_subtitle_title">Subtitle</string>
    <string name="menu_item_subtitle_btn">select</string>
    <string name="menu_item_timezone_title">Time Zone</string>
    <string name="menu_item_timezone_spinner">select</string>
    <string name="menu_item_version_title">Version</string>
    <string name="menu_item_version">version X.X</string>
    <string name="menu_item_reset_title">Reset Defualt</string>
    <string name="menu_item_reset">Reset</string>
    <string name="menu_txt_on">Open Menu</string>
    <string name="menu_txt_off">Close Menu</string>

    <string name="main_tuner_list_prompt">Select a tuner</string>
    <string name="prompt_no_tuner_available"><![CDATA[<no tuner available>]]></string>
    <string name="prompt_no_tuner_selected"><![CDATA[<no tuner selected>]]></string>
    <string name="prompt_tuner_activating"><![CDATA[<tuner activating…>]]></string>
    <string name="loadchlstdlg_title">Load the channel list scanned in the last time?</string>
    <string name="loadchlstdlg_positive_btntxt">Yes</string>
    <string name="loadchlstdlg_negative_btntxt">No</string>
    <string name="main_scan_btntxt">Scan</string>
    <string name="main_open_btntxt">Open</string>
    <string name="main_epg_btntxt">Epg</string>
    <string name="main_start_record_btntxt">Start\nRecord</string>
    <string name="main_stop_record_btntxt">Stop\nRecord</string>
    <string name="main_channel_list_prompt">Select a channel</string>
    <string name="prompt_no_channel_available"><![CDATA[<no channel available>]]></string>
    <string name="prompt_no_channel_selected"><![CDATA[<no channel selected>]]></string>
    <string name="main_default_signal_strength">N/A</string>

    <string name="main_chbar_program_title_default">Channel not selected</string>
    <string name="main_chbar_loading">Loading...</string>

    <string name="main_switch_channel_number">Invalid number</string>

    <string name="scandlg_title_choose_mode">Choose scan mode</string>
    <string name="scandlg_title_set_param">Set scan parameter</string>
    <string name="scandlg_title_in_scan">Scaning…</string>
    <string name="scandlg_title_scan_done">Scan is done</string>
    <string name="scandlg_btntxt_manual_scan">Manual Scan</string>
    <string name="scandlg_edttxt_default_start_freq">15</string>
    <string name="scandlg_edttxt_default_end_freq">20</string>
    <string name="scandlg_edttxt_default_band_width">6000</string>
    <string name="scandlg_btntxt_region_scan">Region Scan</string>
    <string name="scandlg_tag_start_freq">Start frequency(kHz)</string>
    <string name="scandlg_tag_end_freq">End frequency(kHz)</string>
    <string name="scandlg_tag_band_width">Band width(kHz)</string>
    <string name="scandlg_tag_merge_result">Merge result into current channel list</string>
    <string name="scandlg_tag_region">Region</string>
    <string name="scandlg_tag_scan_at">Scanning at</string>
    <string name="scandlg_tag_channel_scanned">Channels scanned: </string>
    <string name="scandlg_btntxt_scan">Scan</string>
    <string name="scandlg_btntxt_stop">Stop</string>
    <string name="scandlg_btntxt_ok">Ok</string>
    <string name="scandlg_btntxt_cancel">Cancel</string>
    <string name="scanning_tag">scanning at frequency</string>

    <string name="openfdlg_title_choose_file">Choose a file</string>
    <string name="openfdlg_btntxt_ok">Ok</string>

    <string name="epgdlg_title_epg">EPG</string>
    <string name="epgdlg_btntxt_refresh">Refresh</string>
    <string name="epgdlg_btntxt_ok">OK</string>

    <string name="sigtestdlg_title">Signal quality test</string>
    <string name="sigtestdlg_tag_frequency">Test frequency(kHz)</string>
    <string name="sigtestdlg_tag_band_width">Band width(kHz)</string>
    <string name="sigtestdlg_btntxt_start_test">Start test</string>
    <string name="sigtestdlg_btntxt_stop_test">Stop test</string>
    <string name="sigtestdlg_btntxt_ok">Ok</string>
    <string name="sigtestdlg_default_text_status">Test not started.</string>
    <string name="sigtestdlg_edttxt_default_test_freq">506000</string>
    <string name="sigtestdlg_edttxt_default_band_width">8000</string>
    <string name="subtitle_track_title">Subtitle Track</string>

    <string name="log_activity_label">DTV Logs</string>
    <string name="setup_wizard">Setup Wizard</string>
    <string name="msg_setup">Please Select a TV standard : </string>

    <string-array name="list_video_decoder_mode">
        <item>Software decoder</item>
        <item>Hardware decoder</item>
    </string-array>


</resources>
