<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/scan_dialog_background">

    <RelativeLayout
        android:id="@+id/dialog_scan_viewgroup_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        >
        <TextView
            android:id="@+id/dialog_scan_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:textSize="22sp"
            android:textColor="@android:color/black"
            android:text="@string/scandlg_title_choose_mode"

            />
        <!--android:textAppearance="@style/TextAppearance.Tasker.DialogTitle"-->
        <ProgressBar
            style="@android:style/Widget.ProgressBar.Large"
            android:id="@+id/dialog_scan_title_wheel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="10dp"
            android:visibility="invisible"
            android:progressDrawable="@android:color/darker_gray" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/dialog_scan_divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/dialog_scan_viewgroup_title"
        android:src="@android:color/darker_gray"/>

    <RelativeLayout
        android:id="@+id/dialog_scan_content_viewgroups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_scan_divider1">

        <RelativeLayout
            android:id="@+id/dialog_scan_viewgroup_choose_mode"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:visibility="visible">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <Button
                    android:id="@+id/butn_scandlg_manual_scan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/scandlg_btntxt_manual_scan"
                    android:background="@drawable/btn_background"
                    />
                <Button
                    android:id="@+id/butn_scandlg_region_scan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/butn_scandlg_manual_scan"
                    android:layout_marginLeft="10dp"
                    android:text="@string/scandlg_btntxt_region_scan"
                    android:background="@drawable/btn_background"/>
            </RelativeLayout>
        </RelativeLayout>

        <ScrollView
            android:id="@+id/dialog_scan_viewgroup_manual_scan"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="15dp"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scandlg_tag_start_freq"/>
                <EditText
                    android:id="@+id/edtv_scandlg_start_freq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="numberDecimal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scandlg_tag_end_freq"/>
                <EditText
                    android:id="@+id/edtv_scandlg_end_freq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="numberDecimal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scandlg_tag_band_width"/>
                <EditText
                    android:id="@+id/edtv_scandlg_band_width"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="numberDecimal"/>
                <CheckBox
                    android:id="@+id/ckbx_scandlg_merge_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/scandlg_tag_merge_result"/>
            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/dialog_scan_viewgroup_region_scan"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:visibility="gone">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/tag_region_selector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/scandlg_tag_region"/>
                <Spinner
                    android:id="@+id/spinner_scandlg_region"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_toRightOf="@id/tag_region_selector"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dialog_scan_viewgroup_in_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/tag_scan_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="18dp"

                    android:text="@string/scanning_tag"
                    />
                <!--android:textAppearance="@style/TextAppearance.Tasker.DialogTitle"-->
                <TextView
                    android:id="@+id/txtv_scan_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tag_scan_at"
                    android:text="..."
                    />
                <!--android:textAppearance="@style/TextAppearance.Tasker.DialogTitle"-->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tag_scan_at"
                    android:layout_alignLeft="@id/tag_scan_at">
                    <ProgressBar
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:id="@+id/progbar_scan"
                        android:layout_width="120dp"
                        android:layout_height="15dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:progress="0"/>
                    <TextView
                        android:id="@+id/txtv_scan_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/progbar_scan"
                        android:layout_marginLeft="10dp"
                        android:layout_centerVertical="true"
                        />
                    <!--android:textAppearance="@style/TextAppearance.Tasker.DialogContent"-->
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dialog_scan_viewgroup_scan_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_below="@id/dialog_scan_viewgroup_in_scan">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/tag_channel_scanned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/scandlg_tag_channel_scanned"/>
                <TextView
                    android:id="@+id/txtv_channel_scanned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tag_channel_scanned"
                    android:text="0"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/dialog_scan_divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/dialog_scan_content_viewgroups"
        android:layout_marginVertical="10dp"
        android:src="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_scan_divider2"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">
        <Button
            android:id="@+id/butn_scandlg_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/scandlg_btntxt_cancel"
            android:background="@drawable/btn_background"/>
    </LinearLayout>
</RelativeLayout>
